fix all issue of auth gateway service integration

--- a/.env
+++ b/.env
@@ -27,6 +27,35 @@ DB_NAME=db_nest_micro_mono
 DATABASE_URL=postgresql://sujoynath:sujoy@localhost:5432/db_nest_micro_mono?schema=public&sslmode=prefer
 MONGO_URL=mongodb://localhost:27017/nest_micro_mono?retryWrites=true
 
+# Any random strong text
+JWT_ACCESS_SECRET=tests
+JWT_REFRESH_SECRET=tests
+JWT_TOKEN_EXPIRY=24 hrs
+DEVICE_TOKEN_EXPIRY=360 days
+
+
+#From db or env
+MAIL_MAILER=smtp
+MAIL_HOST=smtp.googlemail.com
+MAIL_PORT=465
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_ENCRYPTION=ssl
+MAIL_FROM_ADDRESS=
+MAIL_FROM_NAME=${APP_NAME}
+
+AUTH_GATEWAY_SERVICE_PORT = 3001
+AUTH_GATEWAY_SERVICE_URL = http://localhost:3001
+
+USER_SERVICE_PORT = 3002
+USER_SERVICE_URL = http://localhost:3002
+
+NOTIFICATION_SERVICE_PORT = 3003
+NOTIFICATION_SERVICE_URL = http://localhost:3003
+
+LOGGER_SERVICE_PORT = 3004
+LOGGER_SERVICE_URL = http://localhost:3004
+
 # single or daily
 LOG_CHANNEL=daily
 QUERY_DEBUG=false
