--- a/package.json
+++ b/package.json
@@ -32,15 +32,18 @@
     "seed": "ts-node ../seeds/seed.ts"
   },
   "dependencies": {
+    "@apollo/server": "^4.10.4",
     "@devoxa/prisma-relay-cursor-connection": "^3.1.1",
+    "@nestjs/apollo": "^12.1.0",
     "@nestjs/axios": "^3.0.2",
-    "@nestjs/common": "^8.0.0",
+    "@nestjs/common": "^10.3.8",
     "@nestjs/config": "^3.2.2",
-    "@nestjs/core": "^8.0.0",
+    "@nestjs/core": "^10.3.8",
     "@nestjs/graphql": "^12.1.1",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/serve-static": "^4.0.2",
     "@nestjs/swagger": "^7.3.1",
     "@nestjs/throttler": "^5.1.2",
     "@prisma/client": "5.13.0",
@@ -52,12 +55,16 @@
     "googleapis": "^137.1.0",
     "graphql": "^16.8.1",
     "graphql-redis-subscriptions": "^2.6.1",
+    "graphql-subscriptions": "^2.0.0",
+    "graphql-tools": "^9.0.1",
     "graphql-upload": "^12.0.0",
     "handlebars": "^4.7.8",
     "nestjs-prisma": "^0.23.0",
     "nestjs-throttler-storage-redis": "^0.4.4",
     "nestjs-twilio": "^4.4.0",
+    "nodemailer": "^6.9.13",
     "otplib": "^12.0.1",
+    "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
