--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
     "paths": {
+      "@nestjs/*": ["node_modules/@nestjs/*"],
       "@app/prisma": [
         "libs/prisma/src"
       ],
